update vim-ide first post

--- a/_posts/2015-01-25-vim-as-ide.md
+++ b/_posts/2015-01-25-vim-as-ide.md
@@ -5,12 +5,14 @@ description: "Its ON, baby"
 headline: "Let's Fire up the Engines"
 categories: personal
 tags: 
-  - blogging
-  - jekyll
+  - vim
+  - ide
+  - ycm
+  - clang
 imagefeature: "website-speed.jpg"
 imagecredit: spreadeffect.com
 imagecreditlink: "http://www.spreadeffect.com/blog/improve-website-speed/"
-comments: false
+comments: true
 mathjax: null
 featured: true
 published: true
@@ -22,11 +24,30 @@ published: true
 Vim как IDE
 ===================
 
-Довольно часто сталкиваюсь с мнением, что всякого рода "простые" редакторы для разработки не подходят и делать это можно почему-то только в каком-нибудь eclipse или чем-то вроде того и ничего что оно тянет за собой jvm, долго грузится, а на нетбуках так и вовсе без хороших танцев с бубном с этим работать невозможно. Я покажу как можно настроить вим для удобной работы с кодом, что будет интересно его энтузиастам или тем кто использует его из-за политики компании(да, такое внезапно бывает).
+Довольно часто сталкиваюсь с мнением, что всякого рода "простые" редакторы для
+разработки не подходят и делать это можно почему-то только в каком-нибудь
+eclipse или чем-то вроде того и ничего что оно тянет за собой jvm, долго
+грузится, а на нетбуках так и вовсе без хороших танцев с бубном с этим работать
+невозможно. Я покажу как можно настроить вим для удобной работы с кодом, что
+будет интересно его энтузиастам или тем кто использует его из-за политики
+компании(да, такое внезапно бывает).
 
-Сразу скажу что я использую чистый vim с эмулятором терминала st(потому что у urxvt у меня криво работает font fallback, а обычные эмуляторы терминала потребляют много ресурсов и на фоне этих медленно работают), а не gvim, потому что это дает большие преимущества в плане интеграции с tmux и многое другое.
+Сразу скажу что я использую чистый vim с эмулятором терминала st(потому что
+у urxvt у меня криво работает font fallback, а обычные эмуляторы терминала
+потребляют много ресурсов и на фоне этих медленно работают), а не gvim, потому
+что это дает большие преимущества в плане интеграции с tmux и многое другое.
 
-Кто вообще не знает как им пользоваться может обратиться сначала к vimtutor, а потом к *:help*. В том что касается vim script довольно много *dark corners*, с ними, если есть желание, лучше разбираться на реальных плагинах, которые лежат на гитхабе. В целом это не самый приятный язык, вот в NeoVim(https://neovim.io/) от него пытаются отойти в сторону lua, а для legacy кода на VimL сделать конвертер. Как-нибудь позже про него напишу, он даже почти юзабельный, лично для меня не хватает, пожалуй, полной поддержки биндингов python 2/3(например powerline использовать пока не выйдет) и нормальной поддержки биндингов ruby. Остается надеяться, что это будет решено в будущем. За прогрессом в области поддержки моей любимой powerline можно поглядеть вот здесь:
+Кто вообще не знает как им пользоваться может обратиться сначала к vimtutor,
+а потом к *:help*. В том что касается vim script довольно много *dark corners*,
+с ними, если есть желание, лучше разбираться на реальных плагинах, которые
+лежат на гитхабе. В целом это не самый приятный язык, вот
+в NeoVim(https://neovim.io/) от него пытаются отойти в сторону lua, а для
+legacy кода на VimL сделать конвертер. Как-нибудь позже про него напишу, он
+даже почти юзабельный, лично для меня не хватает, пожалуй, полной поддержки
+биндингов python 2/3(например powerline использовать пока не выйдет)
+и нормальной поддержки биндингов ruby. Остается надеяться, что это будет решено
+в будущем. За прогрессом в области поддержки моей любимой powerline можно
+поглядеть вот здесь:
 https://github.com/powerline/powerline/pull/1507
 
 ~/.vimrc
@@ -46,7 +67,10 @@ set shell=/bin/sh
 if !1 | finish | endif
 {% endhighlight %}
 
-Это "стандартные" и полезные установки чтобы все плагины корректно загрузились/установились. И ещё "guard" для "обрезанного" вима чтобы зря не писал много warning'ов и error'ов. К тому же в 21-ом веке нет большого резона использовать что-то кроме utf8.
+Это "стандартные" и полезные установки чтобы все плагины корректно
+загрузились/установились. И ещё "guard" для "обрезанного" вима чтобы зря не
+писал много warning'ов и error'ов. К тому же в 21-ом веке нет большого резона
+использовать что-то кроме utf8.
 
 Полезной функцией является вот эта, которую я нашел, кажется, на slashdot'е:
 
@@ -65,7 +89,10 @@ if 1
 endif
 {% endhighlight %}
 
-Здесь написано что если вим всё поддерживает, то добавить функцию для профилировки. Результаты будут записаны в /tmp/vim*profile.txt, их анализ труда не представляет. Это можно использовать когда вим тормозит непонятно почему. С большой долей вероятности первые строчки списков покажут "вредителя".
+Здесь написано что если вим всё поддерживает, то добавить функцию для
+профилировки. Результаты будут записаны в /tmp/vim*profile.txt, их анализ труда
+не представляет. Это можно использовать когда вим тормозит непонятно почему.
+С большой долей вероятности первые строчки списков покажут "вредителя".
 
 Ещё одна забавная штука:
 {% highlight vim %}
@@ -79,7 +106,9 @@ if has('vim_starting') && has('reltime')
 endif
 {% endhighlight %}
 
-Показывает в сообщений время, которое ушло на запуск. *echom* добавляет инфу не только на вывод, но и в :messages, так что это всегда можно посмотреть если пропустили. Значения типа 30s дают повод задуматься :)
+Показывает в сообщений время, которое ушло на запуск. *echom* добавляет инфу не
+только на вывод, но и в :messages, так что это всегда можно посмотреть если
+пропустили. Значения типа 30s дают повод задуматься :)
 
 {% highlight vim %}
 if has('vim_starting')
@@ -93,7 +122,11 @@ if has('vim_starting')
 endif
 {% endhighlight %}
 
-Это инициализация для NeoBundle, а также для powerline(красивая статусная строка, о ней, пожалуй, расскажу отдельно) и fzf, очень удобного, быстрого независимого от vim fuzzyfinder'а для быстрой навигации по файлам вроде того что есть в продуктах jetbrains. Чтобы он(fzf) работал ещё понадобится tmux, терминальный мультиплексор.
+Это инициализация для NeoBundle, а также для powerline(красивая статусная
+строка, о ней, пожалуй, расскажу отдельно) и fzf, очень удобного, быстрого
+независимого от vim fuzzyfinder'а для быстрой навигации по файлам вроде того
+что есть в продуктах jetbrains. Чтобы он(fzf) работал ещё понадобится tmux,
+терминальный мультиплексор.
 
 Поддержа python2 в neovim:
 
@@ -104,6 +137,8 @@ if has('nvim')
     \        . expand('~/.vim/after/') . ',' . &rtp
     runtime! plugin/python_setup.vim
     let $NVIM_TUI_ENABLE_TRUE_COLOR=1
+    let $NVIM_TUI_ENABLE_CURSOR_SHAPE=1
+    source ~/.vim/01-nvim_terminal_fix.vim
 endif
 {% endhighlight %}
 
@@ -116,16 +151,14 @@ let s:neobundle_repo = 'https://github.com/Shougo/neobundle.vim'
 let g:neobundle#cache_file = expand('$HOME/.vim/neobundlecache')
 let &runtimepath.=','.s:neobundle_dir
 try
-	call neobundle#begin(s:bundle_dir)
-catch /E117/ " neobundle not installed
-	execute "!mkdir -p " .  s:neobundle_dir
-	execute "!" . "git clone " s:neobundle_repo . " " . s:neobundle_dir
-	call neobundle#begin(s:bundle_dir)
-	NeoBundleInstall
-	call neobundle#end()
-	quit
+    call neobundle#begin(s:bundle_dir)
+    catch /E117/ " neobundle not installed
+        execute "silent !mkdir -p " .  s:neobundle_dir
+        execute "silent !" . "git clone " s:neobundle_repo . " " . s:neobundle_dir
+        NeoBundleInstall
+    call neobundle#end()
+    quit
 endtry
-
 if neobundle#load_cache()
     source ~/.vim/00-bundlelist.vim
     NeoBundleSaveCache
@@ -144,29 +177,52 @@ NeoBundleCheck
 Плагины
 -------------
 
-Начну наверно с описания плагинов, потому что без них получить хороший автокомплит и тому подобные плюшки в виме не получится.
+Начну наверно с описания плагинов, потому что без них получить хороший
+автокомплит и тому подобные плюшки в виме не получится.
 
-В качестве менеджера для плагинов я использую NeoBundle вместо Vundle, в основном потому что он поддерживает кэширование, "ленивую" загрузку плагинов по тригеррам, комментарии после NeoBundle <...> и вообще есть не просит.
+В качестве менеджера для плагинов я использую NeoBundle вместо Vundle,
+в основном потому что он поддерживает кэширование, "ленивую" загрузку плагинов
+по тригеррам, комментарии после NeoBundle <...> и вообще есть не просит.
 
-Список плагинов у меня такой: https://raw.githubusercontent.com/neg-serg/dotfiles/master/.vim/00-bundlelist.vim
+Список плагинов у меня такой:
+https://raw.githubusercontent.com/neg-serg/dotfiles/master/.vim/00-bundlelist.vim
 
-Выглядит внушительно, но на самом деле всё не так страшно как кажется. Только некоторые из них имеют решающее значение, вроде YouCompleteMe, остальные это скорее приятное дополнение вроде файлов для подсветки синтаксиса или чего-то такого от чего я использую примерно одну команду(вроде vim-rename2)
+Выглядит внушительно, но на самом деле всё не так страшно как кажется. Только
+некоторые из них имеют решающее значение, вроде YouCompleteMe, остальные это
+скорее приятное дополнение вроде файлов для подсветки синтаксиса или чего-то
+такого от чего я использую примерно одну команду(вроде vim-rename2)
 
 #### YouCompleteMe
 
-Чудо, произведенное на свет сотрудником google Valloric'ом. Дает быстрый автокомплит прямо во время печати с fuzzy-finding'ом. Выглядит это примерно вот так:
+Чудо, произведенное на свет сотрудником google Valloric'ом. Дает быстрый
+автокомплит прямо во время печати с fuzzy-finding'ом. Выглядит это примерно вот
+так:
 
 ![YouCompleteMe GIF demo](http://i.imgur.com/0OP4ood.gif)
 
-Из языков  сишной группы поддерживается C/C++/Objective-C/Objective-C++ через Clang. Лично я использовал только C и C++. Всё это требует специального конфига на питоне, в котором будут команды для Clang-компилера. Я считаю что есть два неплохих примера, с которыми всё стабильно работает достаточно, основной у меня лежит по адресу ~/.vim/.ycm_extra_conf.py. Самая понятная из модификаций часть у него это flags. Если в списке flags неправильные пути для c++-шных библиотек, то clang их просто не увидит, но в целом это легко исправить руками, достаточно посмотреть с помощью, например, *ls /usr/include/c++*. Кроме того после установки нужно не забыть скомпилировать его с помощью, например
+Из языков  сишной группы поддерживается C/C++/Objective-C/Objective-C++ через
+Clang. Лично я использовал только C и C++. Всё это требует специального конфига
+на питоне, в котором будут команды для Clang-компилера. Я считаю что есть два
+неплохих примера, с которыми всё стабильно работает достаточно, основной у меня
+лежит по адресу ~/.vim/.ycm_extra_conf.py. Самая понятная из модификаций часть
+у него это flags. Если в списке flags неправильные пути для c++-шных библиотек,
+то clang их просто не увидит, но в целом это легко исправить руками, достаточно
+посмотреть с помощью, например, *ls /usr/include/c++*. Кроме того после
+установки нужно не забыть скомпилировать его с помощью, например
 
 {% highlight sh %}
 ./install.sh --clang-completer --system-libclang --system-boost
 {% endhighlight %}
 
-Поддержку omnisharp можно добавить по вкусу. Флаги с префиксом *--system* говорят о том чтобы он использовал те версии библиотек, которые уже есть в системе, вместо выкачивания своих. Для Arch linux это работает замечательно, в других дистрибутивах это может быть не так(особенно, наверное, вроде debian или mint)
+Поддержку omnisharp можно добавить по вкусу. Флаги с префиксом *--system*
+говорят о том чтобы он использовал те версии библиотек, которые уже есть
+в системе, вместо выкачивания своих. Для Arch linux это работает замечательно,
+в других дистрибутивах это может быть не так(особенно, наверное, вроде debian
+или mint)
 
-Честно говоря с нахождением нормального работающего конфига под clang у меня в своё время были проблемы, пришлось запиливать его самому на базе образца что был у автора.
+Честно говоря с нахождением нормального работающего конфига под clang у меня
+в своё время были проблемы, пришлось запиливать его самому на базе образца что
+был у автора.
 
 Итак, вот фрагмент "классического" примера .ycm_extra_conf.py:
 
@@ -179,7 +235,10 @@ NeoBundleCheck
 #### bear
 
 Также есть такая интереская штука как bear. https://github.com/rizsotto/Bear
-Она нужна для создания JSON compilation database Clang'а. В результате мы получаем что-то вроде "менеджера проекта". Работа с ним выглядит примерно так: берем проект на си или c++, идем в директорию с ним, далее если в качестве команды сборки используется make, то просто пишем
+Она нужна для создания JSON compilation database Clang'а. В результате мы
+получаем что-то вроде "менеджера проекта". Работа с ним выглядит примерно так:
+берем проект на си или c++, идем в директорию с ним, далее если в качестве
+команды сборки используется make, то просто пишем
 
 {% highlight sh %}
 bear make
@@ -191,20 +250,32 @@ bear make
 cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
 {% endhighlight %}
 
-В результате мы получаем автокомплит для этого проекта с учетом всех его опций компиляции, путей и прочего. Как недостаток придется подождать пока это приложение скомпилируется, зато дальше всё работает очень быстро.
+В результате мы получаем автокомплит для этого проекта с учетом всех его опций
+компиляции, путей и прочего. Как недостаток придется подождать пока это
+приложение скомпилируется, зато дальше всё работает очень быстро.
 
-Для того чтобы YouCompleteMe всё корректно подхватил нужно положить этот файл в директорию с проектом(чтобы он переопределил тот который в ~/.vim):
+Для того чтобы YouCompleteMe всё корректно подхватил нужно положить этот файл
+в директорию с проектом(чтобы он переопределил тот который в ~/.vim):
 
 {% highlight python %}
 {% include dev/ycm_extra_conf_bear_example.py %}
 {% endhighlight %}
 
 
-Также есть поддержка автодополнения для python с помощью jedi(нужно ставить только jedi, без плагина jedi-vim), c# с помощью omnisharp(нужно следить чтобы были правильно настроены файлы solution и project),  а также go и typescript(эти я не пробовал, так что как работает не знаю). Также будет поддерживаться всё где есть omni-complete для любого языка. Под поддержкой имеется в виду fuzzy-finding поиск, инкрементальное автодополнение в этом случае было бы слишком медленным.
+Также есть поддержка автодополнения для python с помощью jedi(нужно ставить
+только jedi, без плагина jedi-vim), c# с помощью omnisharp(нужно следить чтобы
+были правильно настроены файлы solution и project),  а также go
+и typescript(эти я не пробовал, так что как работает не знаю). Также будет
+поддерживаться всё где есть omni-complete для любого языка. Под поддержкой
+имеется в виду fuzzy-finding поиск, инкрементальное автодополнение в этом
+случае было бы слишком медленным.
 
-Настройки для YouCompleteMe можно посмотреть в файле *~/.vim/03-plugins-config.vim*
+Настройки для YouCompleteMe можно посмотреть в файле
+*~/.vim/03-plugins-config.vim*
 
-На мой взгляд интересная особенность это возможность включения и выключения ycm, например это может понадобиться если автокомплит по каким-то причинам сильно тормозит:
+На мой взгляд интересная особенность это возможность включения и выключения
+ycm, например это может понадобиться если автокомплит по каким-то причинам
+сильно тормозит:
 
 {% highlight vim %}
 nnoremap <silent> <F3> :call youcompleteme#DisableCursorMovedAutocommands()<CR>
@@ -216,17 +287,39 @@ nnoremap <silent> <F4> :call youcompleteme#EnableCursorMovedAutocommands()<CR>
 if neobundle#tap('YouCompleteMe')
 {% endhighlight %}
 
-Позволяют загружать конфигуацию только когда плагин уже присутствует, что по идее должно уменьшать интерференциюю между ними и ускорять загрузку.
+Позволяют загружать конфигуацию только когда плагин уже присутствует, что по
+идее должно уменьшать интерференциюю между ними и ускорять загрузку.
 
-С помощью этого уже можно неплохо писать код и выполнять навигацию по нему с помощью команд :YcmCompleter, теги для этого не требуются. Но так бывает не всегда так что рассмотрим создание тегов.
+С помощью этого уже можно неплохо писать код и выполнять навигацию по нему
+с помощью команд :YcmCompleter, теги для этого не требуются. Но так бывает не
+всегда так что рассмотрим создание тегов.
 
 ### Теги gtags > cscope > ctags и навигация по коду
 
-Обычно все используют в качестве тегов для vim Exuberant Ctags(http://ctags.sourceforge.net) или cscope(http://cscope.sourceforge.net), для обоих из которых у вима достаточно неплохая поддержка. Cscope предоставляет более удобный интерфейс и помимо простого перехода по тегам мы имеем список возможных переходов(например это возникает при overloading'е функций), возможность обратного поиска, то есть где вызывается данная функция, а не только переход к телу или прототипу. В общем хорошая штука, которая поинтереснее чем ctags, к тому же есть приятная cli утилита для работы с cscope db. А ctags поддерживаются даже в vi. Но как по мне это не самое лучшее решение, за сравнением можно глянуть вот сюда: https://github.com/OpenGrok/OpenGrok/wiki/Comparison-with-Similar-Tools
+Обычно все используют в качестве тегов для vim Exuberant
+Ctags(http://ctags.sourceforge.net) или cscope(http://cscope.sourceforge.net),
+для обоих из которых у вима достаточно неплохая поддержка. Cscope предоставляет
+более удобный интерфейс и помимо простого перехода по тегам мы имеем список
+возможных переходов(например это возникает при overloading'е функций),
+возможность обратного поиска, то есть где вызывается данная функция, а не
+только переход к телу или прототипу. В общем хорошая штука, которая
+поинтереснее чем ctags, к тому же есть приятная cli утилита для работы с cscope
+db. А ctags поддерживаются даже в vi. Но как по мне это не самое лучшее
+решение, за сравнением можно глянуть вот сюда:
+https://github.com/OpenGrok/OpenGrok/wiki/Comparison-with-Similar-Tools
 
-В целом могу сказать что gtags быстрее работают, занимают меньше места и имеют больше фич. В общем мастхэв. Кроме того есть интеграция с cscope системой для тегов. Дело в том что к сожалению поддержка cscope в vim'е прибита гвоздями, так что сделать такую же классную навигацию как для cscope не так-то просто(по крайней мере я такой интеграции не видел), но к счастью есть gtags-cscope, который ведет себя в точности как cscope и вим его нормально воспринимает через те же самые команды, не надо переучиваться.
+В целом могу сказать что gtags быстрее работают, занимают меньше места и имеют
+больше фич. В общем мастхэв. Кроме того есть интеграция с cscope системой для
+тегов. Дело в том что к сожалению поддержка cscope в vim'е прибита гвоздями,
+так что сделать такую же классную навигацию как для cscope не так-то просто(по
+крайней мере я такой интеграции не видел), но к счастью есть gtags-cscope,
+который ведет себя в точности как cscope и вим его нормально воспринимает через
+те же самые команды, не надо переучиваться.
 
-В качестве альтернативы было бы интересно посмотреть на https://github.com/Andersbakken/rtags. Кое-какая поддержка в vim'е есть, но она пока оставляет желать лучшего. К тому же так же требует поддержки clang, что, пока, возможно не для любых проектов(совместимость с gcc у clang пока неполная)
+В качестве альтернативы было бы интересно посмотреть на
+https://github.com/Andersbakken/rtags. Кое-какая поддержка в vim'е есть, но она
+пока оставляет желать лучшего. К тому же так же требует поддержки clang, что,
+пока, возможно не для любых проектов(совместимость с gcc у clang пока неполная)
 
 Прежде всего рекомендую небольшую настройку:
 {% highlight vim %}
@@ -259,27 +352,43 @@ if executable("gtags")
 endif
 {% endhighlight %}
 
-Первый это плагин, который поставляется с gnu global, более-менее свежей версии. Его достоинство в том, что поддерживает практически всё то же, что и сам gtags. gasynctags нужен для асинхронного обновления тегов, в противном случае этот процесс для большого проекта занимал бы довольно много времени. Эту операцию можно выполнять автоматически, а можно забиндить на хоткей:
+Первый это плагин, который поставляется с gnu global, более-менее свежей
+версии. Его достоинство в том, что поддерживает практически всё то же, что
+и сам gtags. gasynctags нужен для асинхронного обновления тегов, в противном
+случае этот процесс для большого проекта занимал бы довольно много времени. Эту
+операцию можно выполнять автоматически, а можно забиндить на хоткей:
 
 {% highlight vim %}
 <Space>d      :GasyncTagsEnable<CR>:GtagsCscope<CR>
 {% endhighlight %}
 
-gtags-cscope-vim-plugin делает хоткеи для gtags такими же как и для cscope, довольно удобно. В случае чего их можно легко поменять. Которые начинаются с <kbd>Ctrl+@</kbd> в моем сетапе вообще особого смысла не имеют, потому что для этого есть *drmikehenry/vim-fixkey*, он позволяет использовать биндинги gvim в vim.
+gtags-cscope-vim-plugin делает хоткеи для gtags такими же как и для cscope,
+довольно удобно. В случае чего их можно легко поменять. Которые начинаются
+с <kbd>Ctrl+@</kbd> в моем сетапе вообще особого смысла не имеют, потому что
+для этого есть *drmikehenry/vim-fixkey*, он позволяет использовать биндинги
+gvim в vim.
 
-В общем-то дальше всё как обычно, делаем chdir в проект, потом жмем <kbd>Space+d</kbd> и теги создаются. Кстати chdir удобно делать с помощью *dbakker/vim-projectroot*, он автоматически распознает директории с репозиториями, что удобно(позволяет сразу перейти в проект). Работаем с тегами gnu global как с cscope.
+В общем-то дальше всё как обычно, делаем chdir в проект, потом жмем
+<kbd>Space+d</kbd> и теги создаются. Кстати chdir удобно делать с помощью
+*dbakker/vim-projectroot*, он автоматически распознает директории
+с репозиториями, что удобно(позволяет сразу перейти в проект). Работаем
+с тегами gnu global как с cscope.
 
 ### Сниппеты и UltiSnips
 
-Другой популярной возможностью кодерских редакторов является поддержка сниппетов. Они позволяют редактору писать код за вас. Выглядит это чудо приблизительно вот так:
+Другой популярной возможностью кодерских редакторов является поддержка
+сниппетов. Они позволяют редактору писать код за вас. Выглядит это чудо
+приблизительно вот так:
 
 
 ![GIF Demo](https://raw.github.com/SirVer/ultisnips/master/doc/demo.gif)
 
-Как его конфигурировать можно найти прямо на его странице https://github.com/SirVer/ultisnips
+Как его конфигурировать можно найти прямо на его странице
+https://github.com/SirVer/ultisnips
 Там есть скринкасты и всё понятно.
 
-Остальные движки для сниппетов с YouCompleteMe вроде как не совместимы. В качестве тригерра лично мне удобно использовать <kbd>[Alt]+s</kbd>:
+Остальные движки для сниппетов с YouCompleteMe вроде как не совместимы.
+В качестве тригерра лично мне удобно использовать <kbd>[Alt]+s</kbd>:
 
 {% highlight vim %}
 if neobundle#tap('ultisnips')
@@ -298,13 +407,22 @@ endif
 
 #### Динамическая проверка синтаксиса
 
-Большая часть хороших современных IDE выдает подсказки, когда что-то написано неправильно. Получить то же самое в виме очень просто, для того чтобы это работало динамически для c и c++ достаточно установить и сконфигурировать YouCompleteMe, после чего нам поможет must-have плагин syntastic, информацию о котором можно посмотреть на https://github.com/scrooloose/syntastic
+Большая часть хороших современных IDE выдает подсказки, когда что-то написано
+неправильно. Получить то же самое в виме очень просто, для того чтобы это
+работало динамически для c и c++ достаточно установить и сконфигурировать
+YouCompleteMe, после чего нам поможет must-have плагин syntastic, информацию
+о котором можно посмотреть на https://github.com/scrooloose/syntastic
 
 ![syntastic-demo](https://github.com/scrooloose/syntastic/raw/master/_assets/screenshot_1.png)
 
-Теперь когда clang думает что в коде что-то написано неправильно сразу будет видно что и как. Впрочем в случае YouCompleteMe в случае когда в коде допущена ошибка его автокомплит и прочие фичи, по крайней мере большая их часть, работать не будут, пока она не будет исправлена. Что в общем-то довольно удобно.
+Теперь когда clang думает что в коде что-то написано неправильно сразу будет
+видно что и как. Впрочем в случае YouCompleteMe в случае когда в коде допущена
+ошибка его автокомплит и прочие фичи, по крайней мере большая их часть,
+работать не будут, пока она не будет исправлена. Что в общем-то довольно
+удобно.
 
-Также существует довольно обширная поддержка для других языков, но как правило триггером там служит сохранение файла. Что в большинстве случаев не проблема.
+Также существует довольно обширная поддержка для других языков, но как правило
+триггером там служит сохранение файла. Что в большинстве случаев не проблема.
 
 Вот как он у меня настроен:
 
@@ -342,7 +460,14 @@ endif
 
 #### Сборка и компиляциия
 
-Все мы привыкли к тому же в IDE всегда есть возможность удобной компиляции проектов по нажатию хоткея. В vim'е это тоже есть по умолчанию с помощью команды *:make*, но это не слишком-то удобно из-за синхнонного механизма работы. Впрочем мы можем воспользоваться замечательным плагином от tpope vim-dispatch(https://github.com/tpope/vim-dispatch). Он позволяет, помимо прочего выполнять компиляцию проекта в background'е с помощью *:Make*, а также запускать исполняемый файл в проекте(ну или точнее любой интерактивный процесс) через *:Start*
+Все мы привыкли к тому же в IDE всегда есть возможность удобной компиляции
+проектов по нажатию хоткея. В vim'е это тоже есть по умолчанию с помощью
+команды *:make*, но это не слишком-то удобно из-за синхнонного механизма
+работы. Впрочем мы можем воспользоваться замечательным плагином от tpope
+vim-dispatch(https://github.com/tpope/vim-dispatch). Он позволяет, помимо
+прочего выполнять компиляцию проекта в background'е с помощью *:Make*, а также
+запускать исполняемый файл в проекте(ну или точнее любой интерактивный процесс)
+через *:Start*
 
 Лично мне больше всего по душе вот такие сочетания клавиш:
 {% highlight vim %}
@@ -356,7 +481,11 @@ nmap MC :Make clean<cr>
 
 #### Быстрый поиск нужного файла в проекте(и не только)
 
-Есть такая замечательная вещь как fzf, представляет из себя быстрый поисковик по файлам с fuzzy-finding'ом, написанный на ruby. Причем на активацию можно вешать абсолютно любые действия. В том числе и интегрировать его с vim(и tmux). Вот как это выглядит у меня, сначала компиляция с помощью vim+dispatch, потом поиск с помощью fzf:
+Есть такая замечательная вещь как fzf, представляет из себя быстрый поисковик
+по файлам с fuzzy-finding'ом, написанный на ruby. Причем на активацию можно
+вешать абсолютно любые действия. В том числе и интегрировать его с vim(и tmux).
+Вот как это выглядит у меня, сначала компиляция с помощью vim+dispatch, потом
+поиск с помощью fzf:
 
 ![dispatch-fzf-demo](http://i.imgur.com/YGTKr5G.gif)
 
@@ -364,9 +493,21 @@ nmap MC :Make clean<cr>
 
 #### Работа с vcs
 
-В практически любом современном программном проекте используется та или иная система контроля версий. В частности для git существует очень удобный плагин fugitive, который позволяет работать с git'ом не выходя из вима. На его официальной страничке https://github.com/tpope/vim-fugitive на гитхабе есть сборник скринкастов, так что подробно останавливаться на этом я смысла не вижу. Если совсем кратко, то большая часть команд начинается с *G* вместо аналогичной *<kbd>git [space]</kbd>*, например *git blame -> Gblame* и так далее. Работа с git как приложением выполняется через *:Git [гитовая команда]*. Плагин любим и мной и сообществом и на него стоит обратить внимание. Также для него есть ряд расширений. В частности я очень люблю использовать *Agit* ( https://github.com/cohama/agit.vim ), представляет собой некоторое подобие популярной утилиты *tig* (https://github.com/jonas/tig), которая представляет собой ncurses-based клиент для вима. С ней тоже очень удобно просматривать последние коммиты. Вот как выглядит выхлоп Agit:
+В практически любом современном программном проекте используется та или иная
+система контроля версий. В частности для git существует очень удобный плагин
+fugitive, который позволяет работать с git'ом не выходя из вима. На его
+официальной страничке https://github.com/tpope/vim-fugitive на гитхабе есть
+сборник скринкастов, так что подробно останавливаться на этом я смысла не вижу.
+Если совсем кратко, то большая часть команд начинается с *G* вместо аналогичной
+*<kbd>git [space]</kbd>*, например *git blame -> Gblame* и так далее. Работа
+с git как приложением выполняется через *:Git [гитовая команда]*. Плагин любим
+и мной и сообществом и на него стоит обратить внимание. Также для него есть ряд
+расширений. В частности я очень люблю использовать *Agit*
+( https://github.com/cohama/agit.vim ), представляет собой некоторое подобие
+популярной утилиты *tig* (https://github.com/jonas/tig), которая представляет
+собой ncurses-based клиент для вима. С ней тоже очень удобно просматривать
+последние коммиты. Вот как выглядит выхлоп Agit:
 
 ![agit-demo](http://i.imgur.com/4oxxgBA.png)
 
-Это первая из статей, которая посвящена vim'у, в следующей я расскажу об syntax highlighting и других украшательствах.
-
+Это первая из статей, которая посвящена vim'у, в следующей я сделаю обзор плагинов.
