tell about racer support

--- a/_posts/2015-01-25-vim-as-ide.md
+++ b/_posts/2015-01-25-vim-as-ide.md
@@ -7,9 +7,6 @@ tags:
   - ide
   - ycm
   - clang
-imagefeature: "website-speed.jpg"
-imagecredit: spreadeffect.com
-imagecreditlink: "http://www.spreadeffect.com/blog/improve-website-speed/"
 comments: true
 mathjax: null
 featured: true
@@ -281,7 +278,7 @@ cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
 
 Также есть поддержка автодополнения для python с помощью jedi(нужно ставить
 только jedi, без плагина jedi-vim), c# с помощью omnisharp(нужно следить чтобы
-были правильно настроены файлы solution и project),  а также go
+были правильно настроены файлы solution и project), rust с помощью racer, а также go
 и typescript(эти я не пробовал, так что как работает не знаю). Также будет
 поддерживаться всё где есть omni-complete для любого языка. Под поддержкой
 имеется в виду fuzzy-finding поиск, инкрементальное автодополнение в этом
