--- a/_posts/2016-02-06-my-notion.md
+++ b/_posts/2016-02-06-my-notion.md
@@ -12,9 +12,8 @@ mathjax: null
 featured: true
 published: true
 ---
-
 Ion3 задумывался как тайловый оконный менеджер "новой волны", по сравнению со
-своими более простыми и минималистичными предшественниками, такики как LarsWM,
+своими более простыми и минималистичными предшественниками, такими как LarsWM,
 и породил собой целую новую категорию оконных менеджеров для X11, никто из
 которых, тем не менее, несмотря на то что ион был один из первых, так и не
 повторил полностью заложенную в него на момент закрытия проекта
