--- a/_posts/2016-02-14-fonts.md
+++ b/_posts/2016-02-14-fonts.md
@@ -190,3 +190,8 @@ export INFINALITY_FT_STEM_FITTING_STRENGTH="15"
 {% endhighlight %}
 
 Вот и всё, наслаждайтесь!
+
+Вот пример того как это выглядит у меня:
+
+![font_scr](http://i.imgur.com/rz07l5w.png)
+
