--- a/_posts/2016-01-25-vim-as-ide.md
+++ b/_posts/2016-01-25-vim-as-ide.md
@@ -49,6 +49,11 @@ legacy кода на VimL сделать конвертер. Как-нибудь
 в будущем. За прогрессом в области поддержки моей любимой powerline можно
 поглядеть <a href="https://github.com/powerline/powerline/pull/1507">здесь</a>.
 
+В плане использования я после vimtutor рекомендовал бы ещё обратиться к вот
+этой доке: <a
+href="https://github.com/mhinz/vim-galore">https://github.com/mhinz/vim-galore</a>.
+Она большая и толковая, но для опытного юзера, как мне кажется, бесполезная.
+
 Также для вима существуют *eclim*, которые позволяют встраивать vim(точнее
 gvim) в eclipse. К сожалению его фичи вроде поддержки компилятора gcc для
 инкрементальной компиляции или возможность настройки для работы с linux kernel
