update vim as ide

--- a/_posts/2016-01-25-vim-as-ide.md
+++ b/_posts/2016-01-25-vim-as-ide.md
@@ -50,9 +50,20 @@ legacy кода на VimL сделать конвертер. Как-нибудь
 поглядеть <a href="https://github.com/powerline/powerline/pull/1507">здесь</a>.
 
 В плане использования я после vimtutor рекомендовал бы ещё обратиться к вот
-этой доке: <a
-href="https://github.com/mhinz/vim-galore">https://github.com/mhinz/vim-galore</a>.
+этой доке: <a href="https://github.com/mhinz/vim-galore">https://github.com/mhinz/vim-galore</a>.
 Она большая и толковая, но для опытного юзера, как мне кажется, бесполезная.
+Зато там есть несколько полезных ссылок, а так же примеры известных
+компиляций конфигов, например  <a href="https://github.com/spf13/spf13-vim">spf13</a>.
+И ссылок на то как его лучше использовать как редактор, я бы выделил вот это:
+
+* <a href="https://stackoverflow.com/questions/1218390/what-is-your-most-productive-shortcut-with-vim/1220118#1220118">
+Your problem with Vim is that you don't grok vi.</a> из stackoverflow. Более
+всего стоит обратить внимание на команды, которые достались vim в наследство
+от ex(предка vi).
+
+* <a href="http://vimcasts.org/episodes/archive/">Vimcasts</a>. Сборник
+  скринкастов. Особенно полезны для новичка, потому что видно типичные
+  use-cases и к чему какие хоткеи и команды приводят, удобно.
 
 Также для вима существуют *eclim*, которые позволяют встраивать vim(точнее
 gvim) в eclipse. К сожалению его фичи вроде поддержки компилятора gcc для
