mini update for tags

--- a/_posts/2016-01-25-vim-as-ide.md
+++ b/_posts/2016-01-25-vim-as-ide.md
@@ -2,11 +2,7 @@
 layout: post
 title: Vim as IDE
 categories: personal
-tags: 
-  - vim
-  - ide
-  - ycm
-  - clang
+tags: vim ide ycm clang
 comments: true
 mathjax: null
 featured: true
