--- a/_posts/2016-02-06-my-notion.md
+++ b/_posts/2016-02-06-my-notion.md
@@ -2,11 +2,7 @@
 layout: post
 title: Мой форк Notion wm
 categories: personal
-tags: 
-  - notion
-  - fork
-  - compton
-  - dzen2
+tags: notion fork compton dzen2
 comments: true
 mathjax: null
 featured: true
