--- a/_posts/2016-02-14-fonts.md
+++ b/_posts/2016-02-14-fonts.md
@@ -2,8 +2,7 @@
 layout: post
 title: Мои настройки для шрифтов в linux
 categories: personal
-tags: 
-  - fonts
+tags: fonts
 comments: true
 mathjax: null
 featured: true
