--- a/_posts/2016-03-22-keras_1st.md
+++ b/_posts/2016-03-22-keras_1st.md
@@ -2,10 +2,7 @@
 layout: post
 title: Keras&#58; простой фреймворк для машинного обучения
 categories: personal
-tags: 
-  - machine learning
-  - LSTM
-  - Tensor Flow
+tags: [machine learning, LSTM, Tensor Flow]
 comments: true
 mathjax: null
 featured: true
