--- a/_posts/2016-06-20-fonts.collection.md
+++ b/_posts/2016-06-20-fonts.collection.md
@@ -2,9 +2,7 @@
 layout: post
 title: Неплохая подборка шрифтов
 categories: personal
-tags: 
-  - fonts
-  - archive
+tags: fonts archive
 comments: true
 mathjax: null
 featured: true
