--- a/_posts/2016-06-21-free-cams.md
+++ b/_posts/2016-06-21-free-cams.md
@@ -2,9 +2,7 @@
 layout: post
 title: Список URL, по которым можно найти публичные видеокамеры
 categories: personal
-tags: 
-  - webcam
-  - fun
+tags: webcam fun
 comments: true
 mathjax: null
 featured: true
