--- a/_posts/2016-06-21-vim.easter.eggs.md
+++ b/_posts/2016-06-21-vim.easter.eggs.md
@@ -2,8 +2,7 @@
 layout: post
 title: Видео с пасхальными яйцами vim.
 categories: personal
-tags: 
-  - vim
+tags: vim
 comments: true
 mathjax: null
 featured: true
