--- a/_posts/2016-06-22-nark.md
+++ b/_posts/2016-06-22-nark.md
@@ -2,8 +2,7 @@
 layout: post
 title: Сверхтяжелейшая наркомания на тему windows 93 в браузере.
 categories: personal
-tags: 
-  - fun
+tags: fun
 comments: true
 mathjax: null
 featured: true
