--- a/_posts/2017-06-11-pci-pass.md
+++ b/_posts/2017-06-11-pci-pass.md
@@ -2,8 +2,7 @@
 layout: post
 title: pci-e passthrough with QEMU on intel / nvidia platform
 categories: personal
-tags: 
-  - virtualization
+tags: virtualization
 comments: true
 mathjax: null
 featured: true
