--- a/_posts/2016-09-14-slant.md
+++ b/_posts/2016-09-14-slant.md
@@ -2,8 +2,7 @@
 layout: post
 title: Slant интересный ресурс
 categories: personal
-tags: 
-  - links
+tags: links
 comments: true
 mathjax: null
 featured: true
