add old-way networking example

--- a/_posts/2017-09-7-pci-pass2.md
+++ b/_posts/2017-09-7-pci-pass2.md
@@ -178,6 +178,59 @@ For some reason we need to add timeout to close connection, netcat does not
 do it automatically, so in case option is not set script will gets stuck
 after bypassing the first device.
 
+# Networking with tap devices
+
+The one of the simplest way to add local network visible to host with
+internet connection shared between host/guest is to use tap devices as
+
+{% highlight shell %}
+    -net nic -net tap,ifname=tap0,script=/home/neg/bin/qemu/qemu-ifup,downscript=/home/neg/bin/qemu/qemu-ifdown
+{% endhighlight %}
+
+where `/home/neg/bin/qemu/qemu-ifup` is custom network up script:
+
+{% highlight shell %}
+sh /home/neg/bin/qemu/setup_nat
+
+bridge=virtnet0
+ip=192.168.100.1
+netmask=255.255.255.0
+
+# Create the bridge if needed
+br_exsist=$(brctl show | grep -c ${bridge})
+if [[ "${br_exsist}" -eq 0 ]]; then
+    brctl addbr "${bridge}"
+    brctl setfd "${bridge}" 0
+    ifconfig "${bridge}" inet "${ip}" netmask "${netmask}" up
+fi
+
+ifconfig "$1" "0.0.0.0" promisc up
+brctl addif "${bridge}" "$1"
+{% endhighlight %}
+
+and `/home/neg/bin/qemu/qemu-ifdown` is custom network down
+script:
+
+
+{% highlight shell %}
+#!/bin/bash
+bridge=virtnet0
+brctl delif "${bridge}" "$1"
+{% endhighlight %}
+
+Also here is the script to setup internet bypassing inside guest/host NAT:
+
+{% highlight shell %}
+echo 1 > /proc/sys/net/ipv4/ip_forward
+iptables -t nat -A POSTROUTING -o enp6s0 -j MASQUERADE
+iptables -I FORWARD 1 -i tap0 -j ACCEPT
+iptables -I FORWARD 1 -o tap0 -m state --state RELATED,ESTABLISHED -j ACCEPT
+{% endhighlight %}
+
+It's not perfect solution, but it works. Anyway I recommend you to use
+network card bypassing if possible, especially if you are going to play
+Quake Champions a lot :)
+
 # Network card bypassing(new way)
 
 This step is reasonable to do if you want to improve network performance.
