--- a/_posts/2017-09-7-pci-pass2.md
+++ b/_posts/2017-09-7-pci-pass2.md
@@ -21,7 +21,8 @@ All this stuff can be found in my github.
 # Huge pages
 
 This is the simplest part. Use can use hugepages to reduce mm-overhead for
-the system. It can get you up to 5-10% on the some workloads.
+the system. It can get you up to 5-10% performance increased on the some
+workloads.
 
 So, lets detect the full amount of memory
 
@@ -64,7 +65,7 @@ Also don't forget to assign hugepages to QEMU vm:
     -mem-path /dev/hugepages
 {% endhighlight %}
 
-# Usb keyboard/mouse bypass
+# Usb keyboard/mouse dynamic bypass
 
 Currently there is no big need to bypass mouse and keyboard with synergy.
 I was not satisfied with stability on Linux, keyboard layout problems,
