update pci-pass2 artictle script

--- a/_posts/2017-09-7-pci-pass2.md
+++ b/_posts/2017-09-7-pci-pass2.md
@@ -141,34 +141,35 @@ fi
 # loop over given search strings
 for i in "${USB_DEVICES[@]}"; do
 	# loop over results of search string
-	(lsusb | grep -i "$i") | while read line; do
+	(lsusb | grep -i "${i}") | while read line; do
 		bus=$(echo "${line}" | cut -d" " -f2 | sed 's/^0*//')
 		device=$(echo "${line}" | cut -d" " -f4 | sed 's/://' | sed 's/^0*//')
 		vendor=$(echo "${line}" | cut -d" " -f6 | cut -d: -f1)
 		product=$(echo "${line}" | cut -d" " -f6 | cut -d: -f2)
 
 		guestbus="xhci.0"
-		vendorproduct="$vendor:$product"
+		vendorproduct="${vendor}:${product}"
 
-		if [[ $1 == "add" ]]; then
+		if [[ ${1} == "add" ]]; then
 			echo "Passing through (USB):"
 			echo "${line}"
-			bypass_cmd="
+			cmd="
 			{ \"execute\": \"qmp_capabilities\" }
-			{ \"execute\": \"device_add\", \"arguments\": { \"driver\": \"usb-host\", \"hostbus\": \"$bus\", \"hostaddr\": \"$device\", \"id\": \"usb_$vendor.$product.$bus.$device\", \"bus\": \"$guestbus\" }}
+			{ \"execute\": \"device_add\", \"arguments\": { \"driver\": \"usb-host\", \"hostbus\": \"${bus}\", \"hostaddr\": \"${device}\", \"id\": \"usb_${vendor}.${product}.${bus}.${device}\", \"bus\": \"${guestbus}\" }}
 			"
-			echo ${bypass_cmd} | nc -q 3 localhost 4444
-		elif [[ $1 == "del" ]]; then
+			nc -q 3 localhost 4444 <<< "${cmd}"
+		elif [[ ${1} == "del" ]]; then
 			echo "Undoing passthrough (USB):"
-			echo $line
-			echo "
+			echo ${line}
+			cmd="
 			{ \"execute\": \"qmp_capabilities\" }
 			{ \"execute\": \"device_del\", \"arguments\": { \"id\": \"usb_$vendor.$product.$bus.$device\" }}
-			" | nc localhost 4444
+			"
+			nc -q 3 localhost 4444 <<< "${cmd}"
 			sleep 0.5
 		else
 			echo "Unknown command $1! Use either add or del as first argument."
-			kill -s TERM $TOP_PID
+			kill -s TERM ${TOP_PID}
 		fi
 	done
 done
